# Ori

./: .gitignore  CMakeLists.txt  ConnectionsPage.qml  Database.js  README.md  main.cpp  main.qml
